# cancellations

./: .gitignore  .hc  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: test.yaml
.templates/module/: web-app.instructions.hbs
stories/: 1-introduction.mdx  2.1-backend-setup.mdx  2.2-integrity.mdx  2.3-coordinator.mdx  3.1-frontend-setup.mdx  3.2-cancellations-store.mdx  cancellation-detail.stories.js  cancellation-summary.stories.js  create-cancellation.stories.js  edit-cancellation.stories.js
tests/: package.json
tests/src/: cancellation.test.ts  common.ts
ui/: custom-elements.json  package.json  vite.config.ts
ui/demo/: index.html
ui/src/: cancellations-client.ts  cancellations-store.ts  context.ts  index.ts  mocks.ts  types.ts
ui/src/elements/: cancellation-detail.ts  cancellation-summary.ts  cancellations-context.ts  cancellations-for.ts  create-cancellation-dialog.ts  edit-cancellation-dialog.ts  edit-cancellation.ts
ui/xliff/: ca.xlf  de.xlf  es.xlf  sv.xlf
workdir/: dna.yaml  happ.nix  happ.yaml  web-happ.yaml
zomes/coordinator/cancellations/: Cargo.toml  zome.nix
zomes/coordinator/cancellations/src/: cancellation.rs  lib.rs
zomes/coordinator/cancellations/tests/: cancellation.rs
zomes/coordinator/cancellations/tests/common/: mod.rs
zomes/integrity/cancellations/: Cargo.toml  zome.nix
zomes/integrity/cancellations/src/: lib.rs
zomes/integrity/profiles/: Cargo.toml
