[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["zomes/coordinator/*", "zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
holochain = { version = "0.2.3-rc.0", default-features = false, features = [
  "test_utils",
] }
hdk = "0.2.3-rc.0"
hdi = "0.3.3-rc.0"
serde = "1"
