[package]
name = "hc_zome_cancellations_coordinator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_cancellations_coordinator"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

hc_zome_cancellations_integrity = { path = "../../integrity/cancellations", version = "0.0.1" }

[dev-dependencies]
fixt = "0.2.3-rc.0"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { worskpace = true }
tokio = { version = "1.3", features = ["full"] }
